# android-projects

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  as_poet_config.json  benchmark_all.sh  dependencies.dot  example_config.json  prepare_project.sh  regenerate_projects.sh  repositories.bzl  update_graphs.sh
androidAppModule1/: BUILD.bazel  build.gradle
androidAppModule1/src/main/java/androidAppModule1packageJava0/: Foo1.java  Foo2.java
androidAppModule1/src/main/res/layout/: androidappmodule1activity_main0.xml  androidappmodule1activity_main10.xml  androidappmodule1activity_main11.xml  androidappmodule1activity_main12.xml  androidappmodule1activity_main13.xml  androidappmodule1activity_main14.xml  androidappmodule1activity_main15.xml  androidappmodule1activity_main17.xml  androidappmodule1activity_main18.xml
androidAppModule10/: BUILD.bazel
androidAppModule10/src/main/java/androidAppModule10packageJava0/: Foo0.java  Foo1.java  Foo2.java  Foo3.java
androidAppModule10/src/main/res/layout/: androidappmodule10activity_main0.xml  androidappmodule10activity_main10.xml  androidappmodule10activity_main11.xml  androidappmodule10activity_main12.xml  androidappmodule10activity_main15.xml  androidappmodule10activity_main16.xml  androidappmodule10activity_main17.xml  androidappmodule10activity_main18.xml  androidappmodule10activity_main19.xml  androidappmodule10activity_main9.xml
androidAppModule10/src/test/java/androidAppModule10packageJava0/: Foo1Test.java  Foo2Test.java  Foo3Test.java
androidAppModule12/: BUILD.bazel  build.gradle
androidAppModule12/src/main/: AndroidManifest.xml
androidAppModule12/src/main/java/androidAppModule12packageJava0/: Foo2.java  Foo3.java
androidAppModule12/src/main/res/layout/: androidappmodule12activity_main0.xml  androidappmodule12activity_main11.xml  androidappmodule12activity_main12.xml  androidappmodule12activity_main13.xml  androidappmodule12activity_main14.xml  androidappmodule12activity_main15.xml  androidappmodule12activity_main16.xml  androidappmodule12activity_main18.xml  androidappmodule12activity_main9.xml
androidAppModule12/src/main/res/values/: strings.xml
androidAppModule12/src/test/java/androidAppModule12packageJava0/: Foo1Test.java  Foo2Test.java
androidAppModule3/: BUILD.bazel
androidAppModule3/src/main/java/androidAppModule3packageJava0/: Foo0.java  Foo3.java
androidAppModule3/src/main/res/layout/: androidappmodule3activity_main0.xml  androidappmodule3activity_main11.xml  androidappmodule3activity_main13.xml  androidappmodule3activity_main14.xml  androidappmodule3activity_main16.xml  androidappmodule3activity_main17.xml  androidappmodule3activity_main18.xml  androidappmodule3activity_main19.xml  androidappmodule3activity_main7.xml
androidAppModule3/src/main/res/values/: strings.xml
androidAppModule3/src/test/java/androidAppModule3packageJava0/: Foo1Test.java  Foo2Test.java
androidAppModule30/: BUILD.bazel
androidAppModule30/src/main/: AndroidManifest.xml
androidAppModule30/src/main/java/androidAppModule30packageJava0/: Foo0.java
androidAppModule30/src/main/res/layout/: androidappmodule30activity_main1.xml  androidappmodule30activity_main11.xml  androidappmodule30activity_main17.xml  androidappmodule30activity_main19.xml  androidappmodule30activity_main2.xml  androidappmodule30activity_main5.xml  androidappmodule30activity_main8.xml
androidAppModule30/src/test/java/androidAppModule30packageJava0/: Foo0Test.java  Foo1Test.java
androidAppModule32/: BUILD.bazel  build.gradle
androidAppModule32/src/main/: AndroidManifest.xml
androidAppModule32/src/main/java/androidAppModule32packageJava0/: Foo0.java  Foo1.java  Foo3.java
androidAppModule32/src/main/res/layout/: androidappmodule32activity_main11.xml  androidappmodule32activity_main12.xml  (+6 more)
androidAppModule40/: BUILD.bazel
androidAppModule40/src/main/: AndroidManifest.xml
androidAppModule42/: BUILD.bazel
androidAppModule42/src/main/: AndroidManifest.xml
androidAppModule57/: BUILD.bazel  build.gradle
big_connected/androidAppModule0/: BUILD.bazel  build.gradle
big_connected/androidAppModule1/: BUILD.bazel  build.gradle
big_connected/androidAppModule10/: BUILD.bazel  build.gradle
big_connected/androidAppModule10/src/main/: AndroidManifest.xml
big_connected/androidAppModule11/: BUILD.bazel  build.gradle
big_connected/androidAppModule11/src/main/: AndroidManifest.xml
big_connected/androidAppModule12/: BUILD.bazel  build.gradle
big_connected/androidAppModule12/src/main/: AndroidManifest.xml
big_connected/androidAppModule13/: BUILD.bazel  build.gradle
big_connected/androidAppModule13/src/main/: AndroidManifest.xml
big_connected/androidAppModule14/: BUILD.bazel  build.gradle
big_connected/androidAppModule15/: BUILD.bazel  build.gradle
big_connected/androidAppModule15/src/main/: AndroidManifest.xml
big_connected/androidAppModule16/: BUILD.bazel  build.gradle
big_connected/androidAppModule16/src/main/: AndroidManifest.xml
big_connected/androidAppModule17/: BUILD.bazel  build.gradle
big_connected/androidAppModule17/src/main/: AndroidManifest.xml
big_connected/androidAppModule18/: BUILD.bazel  build.gradle
big_connected/androidAppModule18/src/main/: AndroidManifest.xml
big_connected/androidAppModule19/: BUILD.bazel  build.gradle
big_connected/androidAppModule19/src/main/: AndroidManifest.xml
big_connected/androidAppModule2/: BUILD.bazel  build.gradle
big_connected/androidAppModule20/: BUILD.bazel  build.gradle
big_connected/androidAppModule21/: BUILD.bazel  build.gradle
big_connected/androidAppModule21/src/main/: AndroidManifest.xml
big_connected/androidAppModule22/: BUILD.bazel  build.gradle
big_connected/androidAppModule23/: BUILD.bazel  build.gradle
big_connected/androidAppModule24/: BUILD.bazel  build.gradle
big_connected/androidAppModule25/: BUILD.bazel  build.gradle
big_connected/androidAppModule25/src/main/: AndroidManifest.xml
big_connected/androidAppModule26/: BUILD.bazel  build.gradle
big_connected/androidAppModule26/src/main/: AndroidManifest.xml
(+9012 files in other folders)
