android_library(
    name = "androidAppModule1",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule1",
    visibility = ["//visibility:public"], 
    deps = [
        "//androidAppModule10",
        "//androidAppModule39",
        "//androidAppModule7",
        "//module29",
        "//module37"
    ],
)
        