android_library(
    name = "androidAppModule10",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule10",
    visibility = ["//visibility:public"], 
    deps = [
        "//androidAppModule15",
        "//androidAppModule17",
        "//androidAppModule19",
        "//androidAppModule34",
        "//androidAppModule36",
        "//module19"
    ],
)
        