android_library(
    name = "androidAppModule12",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule12",
    visibility = ["//visibility:public"], 
    deps = [
        "//androidAppModule22",
        "//androidAppModule41",
        "//androidAppModule53",
        "//androidAppModule59"
    ],
)
        