android_library(
    name = "androidAppModule3",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule3",
    visibility = ["//visibility:public"], 
    deps = [
        "//androidAppModule18",
        "//androidAppModule26",
        "//androidAppModule4",
        "//androidAppModule6",
        "//androidAppModule9",
        "//module0"
    ],
)
        