android_library(
    name = "androidAppModule30",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule30",
    visibility = ["//visibility:public"], 
    deps = [
        "//androidAppModule35",
        "//androidAppModule61"
    ],
)
        