android_library(
    name = "androidAppModule32",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule32",
    visibility = ["//visibility:public"], 
    deps = [
        "//androidAppModule63",
        "//module17"
    ],
)
        