android_library(
    name = "androidAppModule40",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule40",
    visibility = ["//visibility:public"], 
    deps = [
        "//androidAppModule62"
    ],
)
        