android_library(
    name = "androidAppModule57",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule57",
    visibility = ["//visibility:public"], 
    deps = [
        "//module9"
    ],
)
        