android_binary(
    name = "androidAppModule0",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule0",
    visibility = ["//visibility:public"], 
    deps = [
        "//androidAppModule1",
        "//androidAppModule10",
        "//androidAppModule11",
        "//androidAppModule12",
        "//androidAppModule15",
        "//androidAppModule16",
        "//androidAppModule23",
        "//androidAppModule24",
        "//androidAppModule25",
        "//androidAppModule26",
        "//androidAppModule27",
        "//androidAppModule29",
        "//androidAppModule3",
        "//androidAppModule4",
        "//androidAppModule5",
        "//module0",
        "//module16",
        "//module19",
        "//module20",
        "//module21",
        "//module22",
        "//module26",
        "//module3",
        "//module4",
        "//module5",
        "//module6",
        "//module9"
    ],
)
        