load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_binary(
    name = "androidAppModule0",
    srcs = glob(["src/main/java/**/*.java"]),
    multidex = "native",
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule0",
    visibility = ["//visibility:public"],
    deps = [
        "//androidAppModule26",
        "//module3",
        "//module21",
        "//module4",
        "//androidAppModule15",
        "//module9",
        "//androidAppModule11",
        "//module5",
        "//androidAppModule16",
        "//androidAppModule23",
        "//androidAppModule5",
        "//androidAppModule24",
        "//module16",
        "//androidAppModule27",
        "//module19",
        "//androidAppModule3",
        "//module20",
        "//androidAppModule10",
        "//androidAppModule25",
        "//androidAppModule1",
        "//module22",
        "//module6",
        "//module26",
        "//androidAppModule29",
        "//androidAppModule4",
        "//module0",
        "//androidAppModule12",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)