android_library(
    name = "androidAppModule1",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule1",
    visibility = ["//visibility:public"], 
    deps = [
        "//androidAppModule12",
        "//androidAppModule13",
        "//androidAppModule14",
        "//androidAppModule17",
        "//androidAppModule19",
        "//androidAppModule2",
        "//androidAppModule25",
        "//androidAppModule26",
        "//androidAppModule29",
        "//androidAppModule5",
        "//androidAppModule6",
        "//androidAppModule8",
        "//androidAppModule9",
        "//module0",
        "//module10",
        "//module13",
        "//module14",
        "//module2",
        "//module22",
        "//module23",
        "//module24",
        "//module27",
        "//module28",
        "//module6",
        "//module9"
    ],
)
        