load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "androidAppModule1",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule1",
    visibility = ["//visibility:public"],
    deps = [
        "//androidAppModule29",
        "//androidAppModule5",
        "//module13",
        "//module9",
        "//module24",
        "//module0",
        "//androidAppModule8",
        "//module28",
        "//androidAppModule25",
        "//androidAppModule9",
        "//module22",
        "//module27",
        "//module23",
        "//module6",
        "//module2",
        "//androidAppModule13",
        "//module14",
        "//androidAppModule12",
        "//androidAppModule6",
        "//androidAppModule14",
        "//module10",
        "//androidAppModule17",
        "//androidAppModule19",
        "//androidAppModule26",
        "//androidAppModule2",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)