android_library(
    name = "androidAppModule10",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule10",
    visibility = ["//visibility:public"], 
    deps = [
        "//androidAppModule11",
        "//androidAppModule12",
        "//androidAppModule13",
        "//androidAppModule14",
        "//androidAppModule21",
        "//androidAppModule22",
        "//androidAppModule26",
        "//androidAppModule27",
        "//module0",
        "//module11",
        "//module17",
        "//module18",
        "//module19",
        "//module20",
        "//module21",
        "//module22",
        "//module24",
        "//module25",
        "//module26",
        "//module27",
        "//module29",
        "//module3",
        "//module4",
        "//module5",
        "//module7"
    ],
)
        