load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "androidAppModule10",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule10",
    visibility = ["//visibility:public"], 
    deps = [
        "//androidAppModule11",
        "//androidAppModule12",
        "//androidAppModule13",
        "//androidAppModule14",
        "//androidAppModule21",
        "//androidAppModule22",
        "//androidAppModule26",
        "//androidAppModule27",
        "//module0",
        "//module11",
        "//module17",
        "//module18",
        "//module19",
        "//module20",
        "//module21",
        "//module22",
        "//module24",
        "//module25",
        "//module26",
        "//module27",
        "//module29",
        "//module3",
        "//module4",
        "//module5",
        "//module7",
        gmaven_artifact("com.android.support:appcompat-v7:aar:26.1.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.0.2"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.1")
    ],
)
        