load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "androidAppModule10",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule10",
    visibility = ["//visibility:public"],
    deps = [
        "//androidAppModule27",
        "//module4",
        "//module0",
        "//module17",
        "//module11",
        "//module22",
        "//module3",
        "//androidAppModule14",
        "//module20",
        "//androidAppModule21",
        "//module21",
        "//androidAppModule26",
        "//module27",
        "//module26",
        "//module18",
        "//module7",
        "//androidAppModule22",
        "//module24",
        "//module19",
        "//androidAppModule12",
        "//module29",
        "//androidAppModule13",
        "//module25",
        "//module5",
        "//androidAppModule11",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)