android_library(
    name = "androidAppModule11",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule11",
    visibility = ["//visibility:public"], 
    deps = [
        "//androidAppModule12",
        "//androidAppModule13",
        "//androidAppModule14",
        "//androidAppModule16",
        "//androidAppModule17",
        "//androidAppModule23",
        "//androidAppModule24",
        "//androidAppModule25",
        "//androidAppModule26",
        "//module0",
        "//module1",
        "//module11",
        "//module13",
        "//module16",
        "//module17",
        "//module19",
        "//module21",
        "//module22",
        "//module25",
        "//module26",
        "//module27",
        "//module29",
        "//module4",
        "//module6",
        "//module8",
        "//module9"
    ],
)
        