load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "androidAppModule11",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule11",
    visibility = ["//visibility:public"],
    deps = [
        "//module4",
        "//androidAppModule23",
        "//module13",
        "//module9",
        "//androidAppModule12",
        "//androidAppModule16",
        "//module29",
        "//androidAppModule17",
        "//module0",
        "//module11",
        "//androidAppModule24",
        "//module21",
        "//module6",
        "//androidAppModule13",
        "//module19",
        "//androidAppModule26",
        "//module17",
        "//module27",
        "//androidAppModule25",
        "//androidAppModule14",
        "//module22",
        "//module26",
        "//module16",
        "//module1",
        "//module8",
        "//module25",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)