load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "androidAppModule12",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule12",
    visibility = ["//visibility:public"],
    deps = [
        "//module22",
        "//module10",
        "//androidAppModule18",
        "//module11",
        "//androidAppModule27",
        "//module5",
        "//androidAppModule29",
        "//module7",
        "//module26",
        "//androidAppModule23",
        "//module29",
        "//module28",
        "//module23",
        "//androidAppModule19",
        "//androidAppModule26",
        "//module25",
        "//module15",
        "//module21",
        "//androidAppModule14",
        "//androidAppModule21",
        "//androidAppModule28",
        "//module13",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)