load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "androidAppModule13",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule13",
    visibility = ["//visibility:public"],
    deps = [
        "//androidAppModule27",
        "//module28",
        "//androidAppModule22",
        "//androidAppModule26",
        "//module27",
        "//module26",
        "//module3",
        "//androidAppModule23",
        "//module14",
        "//module16",
        "//module2",
        "//module22",
        "//androidAppModule15",
        "//androidAppModule28",
        "//module8",
        "//module12",
        "//androidAppModule16",
        "//module29",
        "//module9",
        "//androidAppModule29",
        "//module15",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)