load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "androidAppModule14",
    srcs = glob(["src/main/java/**/*.java"]), 
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule14",
    visibility = ["//visibility:public"], 
    deps = [
        "//androidAppModule15",
        "//androidAppModule20",
        "//androidAppModule21",
        "//androidAppModule26",
        "//androidAppModule28",
        "//androidAppModule29",
        "//module0",
        "//module1",
        "//module11",
        "//module13",
        "//module17",
        "//module18",
        "//module19",
        "//module20",
        "//module21",
        "//module25",
        "//module26",
        "//module27",
        "//module29",
        "//module3",
        "//module4",
        "//module5",
        "//module6",
        "//module8",
        gmaven_artifact("com.android.support:appcompat-v7:aar:26.1.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.0.2"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.1")
    ],
)
        