load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "androidAppModule14",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule14",
    visibility = ["//visibility:public"],
    deps = [
        "//androidAppModule26",
        "//module27",
        "//androidAppModule15",
        "//module8",
        "//androidAppModule28",
        "//module17",
        "//module25",
        "//module20",
        "//module13",
        "//module11",
        "//module21",
        "//module4",
        "//module1",
        "//module26",
        "//module3",
        "//module5",
        "//module6",
        "//androidAppModule21",
        "//androidAppModule29",
        "//module0",
        "//module18",
        "//androidAppModule20",
        "//module29",
        "//module19",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)