load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "androidAppModule15",
    srcs = glob(["src/main/java/**/*.java"]), 
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule15",
    visibility = ["//visibility:public"], 
    deps = [
        "//androidAppModule17",
        "//androidAppModule19",
        "//androidAppModule20",
        "//androidAppModule21",
        "//androidAppModule26",
        "//androidAppModule27",
        "//androidAppModule28",
        "//androidAppModule29",
        "//module0",
        "//module1",
        "//module14",
        "//module17",
        "//module19",
        "//module20",
        "//module21",
        "//module22",
        "//module24",
        "//module25",
        "//module26",
        "//module27",
        "//module29",
        "//module5",
        "//module7",
        "//module8",
        "//module9",
        gmaven_artifact("com.android.support:appcompat-v7:aar:26.1.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.0.2"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.1")
    ],
)
        