load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "androidAppModule15",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule15",
    visibility = ["//visibility:public"],
    deps = [
        "//module25",
        "//module27",
        "//androidAppModule19",
        "//module21",
        "//module19",
        "//androidAppModule29",
        "//module1",
        "//androidAppModule20",
        "//module5",
        "//module8",
        "//module14",
        "//module26",
        "//module9",
        "//androidAppModule26",
        "//module29",
        "//androidAppModule21",
        "//androidAppModule28",
        "//module17",
        "//module7",
        "//module0",
        "//module20",
        "//androidAppModule17",
        "//androidAppModule27",
        "//module24",
        "//module22",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)