android_library(
    name = "androidAppModule16",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule16",
    visibility = ["//visibility:public"], 
    deps = [
        "//androidAppModule20",
        "//androidAppModule21",
        "//androidAppModule22",
        "//androidAppModule23",
        "//androidAppModule25",
        "//androidAppModule27",
        "//androidAppModule28",
        "//androidAppModule29",
        "//module1",
        "//module10",
        "//module12",
        "//module13",
        "//module15",
        "//module16",
        "//module17",
        "//module18",
        "//module19",
        "//module2",
        "//module20",
        "//module21",
        "//module22",
        "//module23",
        "//module25",
        "//module5",
        "//module6"
    ],
)
        