load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "androidAppModule16",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule16",
    visibility = ["//visibility:public"],
    deps = [
        "//androidAppModule25",
        "//module6",
        "//module19",
        "//androidAppModule29",
        "//module20",
        "//module17",
        "//module10",
        "//module18",
        "//androidAppModule22",
        "//module5",
        "//module13",
        "//androidAppModule20",
        "//module23",
        "//androidAppModule23",
        "//module22",
        "//androidAppModule21",
        "//module21",
        "//androidAppModule28",
        "//module25",
        "//module16",
        "//module12",
        "//module2",
        "//module1",
        "//module15",
        "//androidAppModule27",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)