load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "androidAppModule18",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule18",
    visibility = ["//visibility:public"],
    deps = [
        "//androidAppModule27",
        "//module0",
        "//androidAppModule23",
        "//module19",
        "//module29",
        "//module24",
        "//module22",
        "//module11",
        "//module23",
        "//module14",
        "//module12",
        "//module16",
        "//androidAppModule21",
        "//androidAppModule28",
        "//androidAppModule24",
        "//androidAppModule25",
        "//module7",
        "//module4",
        "//androidAppModule29",
        "//module9",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)